# instapay-Cpp

./: .gitignore  CMakeLists.txt  todo.txt
src/: InstapayServer.cpp  InstapayServer.h  main.cpp
src/_tests/: GatewayTests.cpp  GatewayTests.hpp  UsersTests.cpp  UsersTests.hpp
src/gateways/: IGateway.hpp
src/gateways/BankGateways/: BankGateway.hpp  MockBankDB.cpp  MockBankDB.hpp
src/gateways/Infrastructure/BankGateways/: BankGateway.cpp  BankGateway.hpp  MockBankDB.cpp  MockBankDB.hpp  MockBankGateway.cpp  MockBankGateway.hpp
src/gateways/Infrastructure/WalletGateways/: MockWalletDB.cpp  MockWalletDB.hpp  MockWalletGateway.cpp  MockWalletGateway.hpp  WalletGateway.cpp  WalletGateway.hpp
src/gateways/WalletGateways/: MockWalletDB.cpp  WalletGateway.hpp
src/presentation/: OperationResult.hpp  Response.h  Response.hpp
src/transactions/controllers/: TransactionsHandlers.cpp  TransactionsHandlers.hpp
src/transactions/dataAccess/: ITransactionDataAccess.hpp  InMemoryTransactions.cpp  InMemoryTransactions.hpp
src/transactions/domain/: ITransaction.hpp  TransferMoney.cpp  TransferMoney.hpp
src/transactions/domain/entities/: ITransaction.hpp
src/transactions/domain/entities/transfers/: Transaction.hpp  TransferAuthorizer.cpp  TransferAuthorizer.hpp  TransferMoney.cpp  TransferMoney.hpp
src/transactions/domain/factories/: TransactionsFactory.hpp
src/transactions/usecase/: TransactionUseCase.hpp  TransactionsUsecase.cpp  TransactionsUsecase.hpp  TransferUseCase.hpp  TransferUsecase.cpp
src/users/: BankUser.hpp  IUser.hpp  UserProfile.hpp  WalletUser.hpp
src/users/controllers/: UsersHandlers.cpp  UsersHandlers.h  UsersHandlers.hpp
src/users/dataAccess/: IUserDataAccess.h  IUserDataAccess.hpp  InMemoryUsers.cpp  InMemoryUsers.h  InMemoryUsers.hpp
src/users/domain/: BankUser.hpp  IUser.hpp  UserProfile.hpp  UserType.hpp  WalletUser.hpp
src/users/usecase/: UsersUsecase.cpp  UsersUsecase.hpp
